added a menu added fadeout effect added login more styling

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
     </head>
 
     <body>
-        <div id='map' style='width: 100vw; height: 100vh;'>
+        <div id='map'>
+        </div>
+        <div id = 'menu-left'>
+            <span id="icon-menu-close" class="icon menu-close">X</span>
+            <h2>GLOBAL DATA SERVICES</h2>
         </div>
     </body>
 </html>
