--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         <div id = 'menu-left'>
             <span id="icon-menu-close" class="icon menu-close">X</span>
             <h2>GLOBAL DATA SERVICES</h2>
+            <ul id="menuList">
+                <li>Info</li>
+                <li>Login</li>
+                <li>Colofon</li>
+                <li>Disclaimer</li>
+            </ul>
         </div>
     </body>
 </html>
