added logo finalized layermenu added glossis data layer updated shoreline datalayer

--- a/index.html
+++ b/index.html
@@ -34,5 +34,8 @@
                 <li>Disclaimer</li>
             </ul>
         </div>
+        <div id="logo">
+            <img src="deltares_logo.png" />
+        </div>
     </body>
 </html>
